# git-vdb

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  GOVERNANCE.md  LICENSE  README.md  RELEASING.md  ROADMAP.md  SECURITY.md  SUPPORT.md  deny.toml  flake.nix  llms.txt  rust-toolchain.toml
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug.yml  config.yml  feature.yml
.github/workflows/: ci.yml  dependency-review.yml  release.yml  supply-chain.yml
benchmarks/format2/: README.md  prototype.py
benchmarks/lancedb/: README.md  datasets.json  harness.py  lancedb_runner.py  pyproject.toml  workload.schema.json
benchmarks/lancedb/workloads/: real-glove-25.json  real-smoke.json  smoke.json  standard.json
docs/: chroma-migration.md  embeddings.md  filtering.md  findings.md  format-v2-ivf-flat.md  format-v2.md  format.md  history.md  integrations.md  persistence.md  quickstart.md  snapshots.md
docs/benchmarks/: lancedb-climb.md  lancedb-performance.md
docs/goals/: lancedb-climb.md  lancedb-performance.md
docs/specs/: 0001-simple-embedded-api.md
examples/: benchmark.rs  filtering.rs  history.rs  lancedb_git_vdb_profile.rs  lancedb_git_vdb_runner.rs  persistence.rs  quickstart.rs  text.rs  text_fastembed.rs
python/: README.md  pyproject.toml
python/src/git_vdb/: __init__.py
python/tests/: test_client.py
src/: adapter.rs  codec.rs  filter.rs  lib.rs  model.rs  root.rs  root_v2.rs  snapshot.rs  store.rs  text.rs
tests/: integration.rs  snapshot.rs  store.rs  text.rs
