[package]
name = "git-vdb"
version = "0.1.0"
edition = "2021"
description = "An embedded vector database backed by immutable Git trees"
license = "Apache-2.0"
repository = "https://github.com/nishu-builder/git-vdb"
homepage = "https://github.com/nishu-builder/git-vdb"
readme = "README.md"
keywords = ["vector-database", "git", "embeddings", "database", "similarity-search"]
categories = ["database-implementations", "command-line-utilities", "data-structures"]

[lib]
name = "git_vdb"
path = "src/lib.rs"

[[bin]]
name = "git-vdb"
path = "src/bin/git-vdb.rs"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
git2 = "0.21"
hex = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
thiserror = "2.0"

[dev-dependencies]
tempfile = "3.15"

[profile.release]
lto = "thin"

[package.metadata.docs.rs]
all-features = true
