[package]
name = "git-vdb"
version = "0.4.0"
edition = "2021"
rust-version = "1.97"
description = "An embedded vector database backed by immutable Git trees"
license = "Apache-2.0"
repository = "https://github.com/nishu-builder/git-vdb"
homepage = "https://github.com/nishu-builder/git-vdb"
documentation = "https://docs.rs/git-vdb"
readme = "README.md"
keywords = ["vector-database", "git", "embeddings", "database", "similarity-search"]
categories = ["database-implementations", "command-line-utilities", "data-structures"]
include = [
    "/src/**",
    "/tests/**",
    "/examples/**",
    "/Cargo.toml",
    "/Cargo.lock",
    "/README.md",
    "/CHANGELOG.md",
    "/CONTRIBUTING.md",
    "/RELEASING.md",
    "/LICENSE",
    "/SECURITY.md",
    "/llms.txt",
    "/docs/quickstart.md",
    "/docs/persistence.md",
    "/docs/filtering.md",
    "/docs/history.md",
    "/docs/embeddings.md",
    "/docs/chroma-migration.md",
    "/docs/integrations.md",
    "/docs/findings.md",
    "/docs/benchmarks/lancedb-performance.md",
    "/docs/specs/0001-simple-embedded-api.md",
    "/docs/format.md",
    "/docs/format-v2.md",
    "/docs/snapshots.md",
    "/python/README.md",
    "/python/pyproject.toml",
    "/python/src/**/*.py",
    "/python/tests/**/*.py",
]

[lib]
name = "git_vdb"
path = "src/lib.rs"

[features]
default = []
fastembed = ["dep:fastembed"]

[[bin]]
name = "git-vdb"
path = "src/bin/git-vdb.rs"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
clap_complete = "4.5"
fastembed = { version = "5.17.3", optional = true, default-features = false, features = ["hf-hub-rustls-tls", "ort-download-binaries-rustls-tls"] }
git2 = "0.21"
hex = "0.4"
regex = "1.11"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
tempfile = "3.15"
thiserror = "2.0"

[profile.release]
lto = "thin"

[package.metadata.docs.rs]
all-features = true
targets = []
