[build-system]
requires = ["hatchling>=1.27"]
build-backend = "hatchling.build"

[project]
name = "git-vdb"
version = "0.4.0.dev0"
description = "Python client for the Git-native git-vdb vector database"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
authors = [{ name = "git-vdb contributors" }]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: Apache Software License",
]

[tool.hatch.build.targets.wheel]
packages = ["src/git_vdb"]
